--- a/demo/pubspec.yaml
+++ b/demo/pubspec.yaml
@@ -1,5 +1,5 @@
-name: flutteruiapp
-description: A new Flutter project.
+name: demo
+description: project for demo.
 
 dependencies:
   flutter:
@@ -13,6 +13,8 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  cupertino_icons: ^0.1.2
+  fluttertoast: ^3.0.3
 
 
 # For information on the generic Dart part of this file, see the
@@ -27,8 +29,6 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  assets:
-   - assets/girl.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.io/assets-and-images/#resolution-aware.
